# my_minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/mygl/: CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  CameraOrtho.hpp  Context.cpp  Context.hpp  Scene.cpp  Shader.h  Shape.cpp  Texture.cpp  Texture.hpp  Transform.hpp
shaders/: cube.fs  cube.vs  cube_shadow.fs  cube_shadow.vs  cursor.fs  cursor.vs  debug_depth.fs  default_cube.fs  depth_shader.fs  depth_shader.vs  entity_shader.fs  entity_shader.vs  sky.fs  sky.vs  sky2.fs  sky2.vs  skybox.vs  test_cube.fs  test_cube.vs
src/: Blocktype.h  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkVertices.cpp  ChunkVertices.hpp  Client.cpp  Client.hpp  Endian.h  Entity.cpp  Entity.hpp  GameScene.cpp  GameScene.hpp  Renderer.cpp  Renderer.hpp  Shadowmap.cpp  Shadowmap.hpp  Threadpool.hpp  World.cpp  World.hpp  brouillon.txt  main.cpp
src/mygl/: Camera3D.cpp  Camera3D.hpp  Clock.hpp  Context.cpp  Context.hpp  ICamera.hpp  Scene.cpp  Scene.hpp  Shader.h  Shape.cpp  Shape.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Transform.hpp  camera_3D.hpp  icamera.hpp
